client no nijanona

--- a/templates/base/root_nav_sidebar.html
+++ b/templates/base/root_nav_sidebar.html
@@ -104,6 +104,12 @@
                         <span class="ml-3 item-text">Races </span>
                     </a>
                 </li>
+                <li class="nav-item ">
+                    <a href="{% url 'liste_client' %}" class=" nav-link">
+                        <i class="fe fe-box fe-16"></i>
+                        <span class="ml-3 item-text">Clients </span>
+                    </a>
+                </li>
 
             </ul>
 
