--- a/templates/base/root_nav_sidebar.html
+++ b/templates/base/root_nav_sidebar.html
@@ -65,7 +65,7 @@
 {#                dashboard  #}
               <a href="{% url 'load_hosting_managemment' %}" >
                 <i class="fe fe-home fe-16"></i>
-                <span class="ml-3 item-text">Dashboard</span><span class="sr-only">(current)</span>
+                <span class="ml-3 item-text">Mon Vet'Conseil</span><span class="sr-only">(current)</span>
               </a>
 
             </li>
@@ -108,6 +108,13 @@
                     <a href="{% url 'liste_client' %}" class=" nav-link">
                         <i class="fe fe-box fe-16"></i>
                         <span class="ml-3 item-text">Clients </span>
+                    </a>
+                </li>
+
+                <li class="nav-item ">
+                    <a href="{% url 'liste_patient' %}" class=" nav-link">
+                        <i class="fe fe-box fe-16"></i>
+                        <span class="ml-3 item-text">Patients</span>
                     </a>
                 </li>
 
