tsy ampy login sisa ny global, dia mbola tsisy exception

--- a/templates/base/root_nav_sidebar.html
+++ b/templates/base/root_nav_sidebar.html
@@ -99,6 +99,12 @@
                     </a>
                 </li>
                 <li class="nav-item ">
+                    <a href="{% url 'liste_personnel' %}" class=" nav-link">
+                        <i class="fe fe-box fe-16"></i>
+                        <span class="ml-3 item-text">Personnels</span>
+                    </a>
+                </li>
+                <li class="nav-item ">
                     <a href="{% url 'liste_race' %}" class=" nav-link">
                         <i class="fe fe-box fe-16"></i>
                         <span class="ml-3 item-text">Races </span>
@@ -117,6 +123,8 @@
                         <span class="ml-3 item-text">Patients</span>
                     </a>
                 </li>
+
+
 
             </ul>
 
