refactor : rearrangement du code

--- a/templates/hebergement/hebergement/ajout_hebergement/ajout_hebergement.html
+++ b/templates/hebergement/hebergement/ajout_hebergement/ajout_hebergement.html
@@ -85,6 +85,18 @@
 
 
                                      <div>
+                                        <h4>tarifs  </h4>
+                                    </div>
+
+                                    <div class="form-row ml-5 mb-5">
+                                        <div class="custom-control custom-switch col-5 p-2">
+                                            {{ form.tarif_journalier }}
+                                            <label class="custom-control-label" for="customSwitch2">cocher pour utiliser un tarif horaire pour la facturation , sinon votre facturation se calculera en  heure  </label>
+                                        </div>
+                                    </div>
+
+
+                                    <div>
                                         <h4>Medicaments  </h4>
                                     </div>
                                     <div class="form-row ml-5 mb-5">
