--- a/static/css/app-light.css
+++ b/static/css/app-light.css
@@ -4670,12 +4670,12 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #1b68ff !important; }
+  background-color: #014AAD !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #004ee7 !important; }
+  background-color: #014AAD !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
