--- a/templates/hebergement/hebergement/Gestion_hebergement.html
+++ b/templates/hebergement/hebergement/Gestion_hebergement.html
@@ -53,7 +53,9 @@ gestion d'hébergement
                                                class="form-control "
                                                id="date-input1"
                                                name="date_test"
-                                                aria-describedby="button-addon2">
+                                                aria-describedby="button-addon2"
+                                                required
+                                        >
                                         <div class="input-group-append">
                                           <div class="input-group-text" id="button-addon-date"><span class="fe fe-calendar fe-16"></span></div>
                                         </div>
@@ -114,9 +116,14 @@ gestion d'hébergement
                            <p class="mb-2"><strong>{{ "vérifications"| title }} de dates libres</strong></p>
                         </div>
                             <div class="card-body">
-                                {% if allowed != None %}
-                                 <div class="alert alert-primary" role="alert">
-                                     <span class="fe fe-alert-circle fe-16 mr-2"></span> {{ allowed }}
+                                {% if form.errors %}
+                                 <div class="alert alert-danger" role="alert">
+
+                                                {% for field in form %}
+                                                    {% for error in field.errors %}
+                                                        <p class="mt-3"><span class="fe fe-minus-circle fe-16 mr-2"></span> {{ error }}</p>
+                                                    {% endfor %}
+                                                {% endfor %}
                                  </div>
 
                                 {% endif %}
@@ -224,12 +231,12 @@ gestion d'hébergement
               });
             },
 
-      eventClick: function(arg) {
-        if (confirm('Are you sure you want to delete this event?')) {
-          arg.event.remove()
-        }
-      },
-      editable: true,
+      {#eventClick: function(arg) {#}
+      {#  if (confirm('Are you sure you want to delete this event?')) {#}
+      {#    arg.event.remove()#}
+      {#  }#}
+      {# }, #}
+      editable: false,
       dayMaxEvents: true, // allow "more" link when too many events
       events: '{% url 'get_reservations' %}'
     });
