refactor: form required

--- a/templates/admin/client/liste.html
+++ b/templates/admin/client/liste.html
@@ -12,12 +12,12 @@ reservations
                         <div class="col-5">
                             <h2 class="mb-2 page-title">liste clients</h2>
                         </div>
-
-
-                    </div>
-                    <div class="row my-4">
+                    <div class="offset-4">
                         <a type="button" class="btn mb-2 btn-primary" href="{% url 'form_insert_client' %}">Ajouter client</a>
                     </div>
+
+                    </div>
+
 
                     <div class="row my-4">
                         <!-- Small table -->
