--- a/templates/admin/client/insertion.html
+++ b/templates/admin/client/insertion.html
@@ -17,31 +17,37 @@ Liste des postes
                         <div class="row">
                             <div class="col-md-12">
 
+                                {% if erreurs %}
+                                <div class="alert alert-danger" role="alert">
+                                     <span class="fe fe-alert-circle fe-16 mr-2"></span> {{ erreurs }}
+                                 </div>
+                                {% endif %}
+
                                 <form {% if client1 %} action="{% url 'modify_client' idClient=client1.id %}"{% else  %} action="{% url 'save_client' %}" {% endif %} method="post">
                                 {% csrf_token %}
                                 <div class="form-group mb-3">
                                     <label >Nom</label>
-                                    <input class="form-control" type="text" name="nom" {% if client1 %} value="{{client1.nom}}" {% endif  %}>
+                                    <input class="form-control" type="text" required name="nom" {% if client1 %} value="{{client1.nom}}" {% endif  %}>
                                     <!--                                        {{forms.designation}}-->
                                 </div>
                                 <div class="form-group mb-3">
-                                    <label >Prenom</label>
-                                    <input  class="form-control" type="text" name="prenom" {% if client1 %} value="{{client1.prenom}}" {% endif  %}>
+                                    <label >Prénom(s)</label>
+                                    <input  class="form-control" type="text" required name="prenom" {% if client1 %} value="{{client1.prenom}}" {% endif  %}>
                                     <!--                                        {{forms.designation}}-->
                                 </div>
                                 <div class="form-group mb-3">
                                     <label >Adresse</label>
-                                    <input  class="form-control" type="text" name="adresse" {% if client1 %} value="{{client1.adresse}}" {% endif  %}>
+                                    <input  class="form-control" type="text" required name="adresse" {% if client1 %} value="{{client1.adresse}}" {% endif  %}>
                                     <!--                                        {{forms.designation}}-->
                                 </div>
                                     <div class="form-group mb-3">
                                         <label >Contact</label>
-                                        <input class="form-control" type="text" name="contact" {% if client1 %} value="{{client1.contact}}" {% endif  %}>
+                                        <input class="form-control" type="tel" name="contact" {% if client1 %} value="{{client1.contact}}" {% endif  %}>
                                         <!--                                        {{forms.designatio}}-->
                                     </div>
                                 <div class="form-group mb-3">
                                     <label >Email</label>
-                                    <input class="form-control" type="text" name="mail" {% if client1 %} value="{{client1.mail}}" {% endif  %}>
+                                    <input class="form-control" type="email" name="mail" {% if client1 %} value="{{client1.mail}}" {% endif  %}>
                                     <!--                                        {{forms.designatio}}-->
                                 </div>
 
