--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -1,19 +1,22 @@
+{% load static %}
+{# navbar #}
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <title></title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/grid.css">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <script src="js/jquery-1.7.1.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/superfish.js"></script>
-    <script src="js/jquery.hoverIntent.minified.js"></script>
-    <script type="text/javascript" src="js/jquery.bouncebox.1.0.js"></script>
-    <script src="js/jquery.ui.totop.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href='{% static "css/reset.css" %}' >
+    <link rel="stylesheet" type="text/css" media="screen" href='{% static "css/style.css" %}'%>
+    <link rel="stylesheet" type="text/css" media="screen" href='{% static "css/grid.css" %}'%>
+    <link rel="icon" href='{% static "images/favicon.ico" %}' type="image/x-icon">
+    <link rel="shortcut icon" href='{% static "images/favicon.ico" %}' type="image/x-icon" />
+    <script src='{% static "js/jquery-1.7.1.min.js" %}'></script>
+    <script src='{% static "js/jquery.easing.1.3.js" %}'></script>
+    <script src='{% static "js/superfish.js" %}'></script>
+    <script src='{% static "js/jquery.hoverIntent.minified.js" %}'></script>
+    <script type="text/javascript" src='{% static "js/jquery.bouncebox.1.0.js" %}'></script>
+    <script src='{% static "js/jquery.ui.totop.js" %}'></script>
     <script>
     $(window).load(function(){
         $('.panel-1').bounceBox();
@@ -70,7 +73,7 @@
         <div class="main-div">
             <div class="div-content">
                  <header>
-                   <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+                   <h1><a href="index.html"><img src='{% static "images/logo.png" %}' alt=""></a></h1>
                    <nav> 
                      <ul class="sf-menu">
                          <li class="current"><a href="index.html">Accueil</a></li>
@@ -87,8 +90,8 @@
                             </ul>
                           </li>
                           <li><a href="#">services</a></li>
-                          <li><a href="#">conseils pour animaux</a></li>
-                          <li><a href="#">contacts</a></li> 
+                          <li><a href="{% url 'inscription' %}">Sign in</a></li>
+                          <li><a href="{% url 'login' %}">Sign on</a></li> 
                       </ul>
                     </nav>
                     <div class="clear"></div>
@@ -98,7 +101,7 @@
                      <div class="panel-1 panel">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur auctor sodales. Praesent malesuada vitae turpis nec eleifend. Duis pharetra maecenas tortor ac tincidunt.</p>
                      </div>
-                     <img src="images/page-img.jpg" alt="">
+                     <img src='{% static "images/page-img.jpg"  %}'alt="">
                      <a href="#" class="link-1 link"><span></span>Vétérinaire<br><strong>Urgence</strong></a>
                  </div>
                  <div class="block-1">
@@ -107,14 +110,14 @@
                          <div class="panel-2 panel">
                            <p>Nunc ipsum dolor sit amet, consectetur adipiscing elit. Duis ultricies pharetra magna, ac accumsan erat molestie sit amet.</p>
                         </div>
-                         <img src="images/page-img-1.jpg" alt="">
+                         <img src='{% static "images/page-img-1.jpg"  %}'alt="">
                      </div>
                  </div>
                  <div class="block-2">
                      <div class="panel-3 panel">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur auctor sodales. Praesent malesuada vitae turpis nec eleifend. Duis pharetra maecenas tortor ac tincidunt.</p>
                      </div>
-                     <img src="images/page-img-2.jpg" alt="">
+                     <img src='{% static "images/page-img-2.jpg"  %}' alt="">
                      <a href="#" class="link-3 link"><span></span>Médecine<br><strong>vétérinaire équine</strong></a> 
                  </div>
                  <div class="block-3">
@@ -123,7 +126,7 @@
                          <div class="panel-4 panel">
                            <p>Donec ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tristique odio sem, in ultricies pharetra. </p>
                         </div>
-                         <img src="images/page-img-3.jpg" alt="">
+                         <img src='{% static "images/page-img-3.jpg" %}' alt="">
                      </div>
                  </div>
                  <div class="clear"></div>
@@ -134,7 +137,7 @@
                     <div class="wrapper bg-wrap">
                         <div class="grid_6 suffix_1">
                             <h2>Bienvenue !</h2>
-                            <img src="images/page-img-4.jpg" alt="" class="top">
+                            <img src='{% static "images/page-img-4.jpg"  %}' alt="" class="top">
                             <p class="font-14 top-1 bot">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla consectetur auctor sodales. Praesent malesuada vitae turpis nec eleifend. Duis pharetra maecenas tortor ac tincidunt.</p>
                             <a href="#" class="button">Lire la suite<span></span></a>
                         </div>
