--- a/templates/hebergement/hebergement/informations_hebergement.html
+++ b/templates/hebergement/hebergement/informations_hebergement.html
@@ -24,7 +24,7 @@
                                     <div class="col">
 
 {#        LIENS VERS ANIMAUX/LISTE_ANIMAUX_HEBERGES.html                                #}
-                                        <a href="/hebergement/list_can_be_hosted_animals">
+                                        <a href="{% url 'animaux_calendrier' %}">
                                             <h3 class="h5 mt-4 mb-1">Animaux</h3>
                                         </a>
                                         <p class="text-muted">
