--- a/templates/site/sign_in.html
+++ b/templates/site/sign_in.html
@@ -2,7 +2,7 @@
 
 <style>
     .login-form {
-        max-width: 300px;
+        max-width: 550px;
         margin: 0 auto;
         padding: 20px;
         background: #f5f5f5;
@@ -42,6 +42,7 @@
 
 <form class="login-form" action="{% url 'save' %}" method="post">
     {% csrf_token %}
+    <h2 class="text-center">Inscription</h2>
     <div class="form-group">
         <label for="nom">Nom</label>
         <input type="text" class="form-control" id="nom" name="nom">
