--- a/templates/site/user/demande_rendez_vous.html
+++ b/templates/site/user/demande_rendez_vous.html
@@ -1,3 +1,5 @@
+{% extends 'base/root.html'%}
+
 {% block title %}
 Insertion rendez-vous
 {% endblock %}
@@ -57,7 +59,7 @@ Insertion rendez-vous
                     </div>
                     {% endif %}
                 </form>
-                <a href="/vet/"><button class="btn btn-outline-secondary mb-3 mt-3">Voir les dates libre</button></a>
+                
             </div>
         </div>
       
