--- a/templates/site/user/user_accueil.html
+++ b/templates/site/user/user_accueil.html
@@ -33,9 +33,10 @@
                   
                     </form>
                     <div id="formFooter">
-                        <a href="http://m.me/vetconseil" class="underlineHover">Contacter</a>
-                      </div>
-                    
+                            <a href="http://m.me/vetconseil" class="underlineHover">Contacter</a>
+                            <a href="{% url 'demande_hebergement' %}" class="underlineHover">Heberger</a>
+                            <a href="{% url 'demande_rendez_vous' %}" class="underlineHover">Rendez-vous</a>
+                      </div>      
         </div>
     </div>
 </body>
