--- a/templates/base/root_nav_sidebar.html
+++ b/templates/base/root_nav_sidebar.html
@@ -14,13 +14,12 @@
             </a>
           </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-muted pr-0" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item">
+            <a class="nav-link text-muted pr-0" href="{% url 'logout' %}">
               <span class="avatar avatar-sm mt-2">
                 <img src="{% static '/assets/avatars/face-1.jpg'%}" alt="..." class="avatar-img rounded-circle">
               </span>
             </a>
-
           </li>
         </ul>
       </nav>
