--- a/templates/site/index.html
+++ b/templates/site/index.html
@@ -91,7 +91,7 @@
                           </li>
                           <li><a href="#">services</a></li>
                           <li><a href="{% url 'inscription' %}">Sign in</a></li>
-                          <li><a href="{% url 'login' %}">Sign on</a></li> 
+                          <li><a href="{% url 'authentification' %}">Sign on</a></li>
                       </ul>
                     </nav>
                     <div class="clear"></div>
